# ADAVIABUSIHM

./: CMakeLists.txt  Contrôle des Accessoires.md  Création de l'UI pour l'affichage des résultats du modèle YOLO.md  MainPage.qml  Projet de Visualisation des Données LIDAR avec Qt et ROS2.md  PyqtLauncher.cpp  README.md  Simulation LiDAR.md  Simulation.md  SplashScreens.qml  Système de Climatisation.md  UI pour Détection d'Objets YOLO.md  UI pour Détection des personnes YOLO.md  UltrasonSensor.cpp  UltrasonSensor.h  UltrasonSensor.ino  appmodel.cpp  main.cpp  main.qml  mytcpsocket.cpp  package.xml  paramètre PART 1.md  paramètre PART 2.md  qml.qrc  radialbar.cpp  rclcomm.cpp  rclcomm.h  settings.cpp  settings.h
assets/3Dmodel/: Bus.qml  Ecoline.qml  OldBus.qml  WhiteBus.qml
assets/3Dmodel/meshes/: ac.mesh  apion.mesh  back_Left_Wheel.mesh  back_Right_Wheel.mesh  ban.mesh  base2_int_.mesh  bodi.mesh  body.mesh  body_bus.mesh  bokong_hitam.mesh  bus.mesh  daleman.mesh  dasbor.mesh  dek.mesh  front_Left_Wheel.mesh  front_Right_Wheel_.mesh  glass.mesh  gorden.mesh  hitam.mesh  jalan.mesh  kaca.mesh  knalpot.mesh  krum.mesh  krum_hitam.mesh  kumis.mesh  kumis2.mesh  kursi.mesh  kursi_kernet.mesh  kursi_supir.mesh  lampu_blkng.mesh  lampu_depan.mesh  lampu_sein.mesh  lantai.mesh  lis.mesh  pelek.mesh  plat.mesh  sayap.mesh  skat.mesh  slap.mesh  slebor.mesh  (+10 more)
components/: Battery.qml  BatteryTile.qml  BigForecastIcon.qml  BusControl.qml  BusSpeed.qml  ControlNavigation.qml  DateTimeTile.qml  ForecastIcon.qml  HelpPanel.qml  KeyBoardTile.qml  LabelSelector.qml  LeftSeatControl.qml  Lidar.qml  MapTile.qml  MeteoWidget.qml  MusicComponent.qml  MusicTile.qml  NavetteImage.qml  NotificationTile.qml  ObjectDetection.qml  PersonCounting.qml  RightSeatControl.qml  SettingsDialog.qml  SideListModel.qml  SpinningFan.qml  TSlider.qml  TopView.qml  UltrasonicData.qml  VolumeControl.qml  WeatherIcon.qml
components/Music/: Music.qml  MusicDelegate.qml  PlayingView.qml
components/SettingsPages/: Autopilote.qml  Display.qml  Driving.qml  Lights.qml  Lock.qml  MapThemes.qml  QuickControl.qml  SafetyAndSecurity.qml  Service.qml
controls/: HomeButton.qml  IconButton.qml  PrefsButton.qml
screens/: CameraStreaming.qml  DetectionScreen.qml  HomeScreen.qml  NavigationScreen.qml  RosScreen.qml  SettingsScreen.qml  UltrasonicSensor.qml
